<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quản lý hóa đơn</string>
    <string name="menu_settings">Thiết lập</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="ok">Đồng ý</string>
    <string name="add_sell_bill">Thêm hóa đơn bán</string>
    <string name="add_buy_bill">Thêm hóa đơn nhập</string>
    <string name="create_sell_bill">Tạo hóa đơn bán hàng</string>
    <string name="create_buy_bill">Tạo hóa đơn mua hàng</string>
    <string name="button_ok">Đồng ý</string>
    <string name="view_sell_bill">Xem hóa đơn bán</string>
    <string name="list_sell_bill">Danh sách hóa đơn bán hàng</string>
    <string name="view_buy_bill">Xem hóa đơn mua</string>
    <string name="list_buy_bill">Danh sách hóa đơn mua hàng</string>
    
    <string name="item_info">Thông tin về món ăn</string>
    
    <string name="statistic">Xem thống kê</string>
    <string name="setting">Thiết lập</string>
    <color name="main_background">#ffffff</color>
    <string name="save">Lưu</string>
    <string name="table_number">Số bàn</string>
    <string name="data">Dữ liệu</string>
    <string name="data_backup">Sao lưu dữ liệu</string>
    <string name="data_restore">Khôi phục dữ liệu</string>
    <string name="data_delete">Xóa sạch dữ liệu</string>
    <string name="item_manage">Quản lý món ăn</string>
    <string name="item_add">Thêm món ăn</string>
    <string name="item_view">Danh sách món ăn</string>
    <string name="item_name">Tên món ăn</string>
    <string name="other">Thiết lập phụ</string>
    <string name="other_alert">Cảnh báo lỗ</string>
    <string name="other_language">Ngôn ngữ</string>
    
    <string name="price">Giá</string>
</resources>