<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
       	android:gravity="center"
       	android:rowCount="2"
       	android:columnCount="2"
       	android:orientation="horizontal"
       	android:padding="10dip"       	
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/item_name"/>
        
        <EditText 
            android:id="@+id/name"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:textSize="20sp"
            android:layout_margin="10dip"
            android:background="@drawable/edittext"
            android:inputType="text"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/price"/>
        
        <EditText 
            android:id="@+id/price"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:textSize="20sp"
            android:layout_margin="10dip"
            android:background="@drawable/edittext"
            android:inputType="numberSigned"/>
        
    </GridLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center|bottom" >

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/ok"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>